tests/cases/fail/list_object_literal_mixed.p4
class Point:
    x: int
    y: int

points: list[Point] = [Point(1, 2), 3]
